# myCNote

./: .gitignore  CMakeLists.txt  README.md  helloWorld.c
basic/: basic.c  basicExer.c  exer.c
const/: const.c  constTest.c  define.c  defineTest.c  diff.c  diff1.c  diff2.c  diff3.c
dataType/: bool.c  boolTest.c  charTest.c  dataTypeTest.c  floatTest.c  literal.c  pointerTest.c  typeConv.c  type_conv.c  varTest.c
dataType/exer/: dataTypeExer1.c  dataTypeExer2.c  exer_1.c  exer_2.c  pointerExer.c
operator/: arithmeticOper.c  arithmetic_operators.c  logicalOper.c  operator.c  relationalOper.c
operator/exer/: arithmeticOperExer.c  arithmetic_operators.c  dateConv.c  date_conv.c  tempConv.c  temp_conv.c
type_of_data/: char.c  int.c  literal.c  pointer.c  type_of_data.c  var.c
type_of_data/exer/: pointer.c
