cmake_minimum_required(VERSION 3.16)
project(myCNote C)

set(CMAKE_C_STANDARD 99)

add_executable(myCNote helloWorld.c)

add_executable(constTest const/constTest.c)
add_executable(defineTest const/defineTest.c)
add_executable(operator operator/oper.c)
add_executable(arithmeticOper operator/arithmeticOper.c)

add_executable(diff const/diff.c)
add_executable(diff1 const/diff1.c)
add_executable(diff2 const/diff2.c)
add_executable(diff3 const/diff3.c)
add_executable(basic basic/basic.c)
add_executable(arithmeticOperExer operator/exer/arithmeticOperExer.c)
add_executable(dateConv operator/exer/dateConv.c)
add_executable(tempConv operator/exer/tempConv.c)
add_executable(basicExer basic/basicExer.c)
add_executable(relationalOper operator/relationalOper.c)
add_executable(boolTest dataType/boolTest.c)
add_executable(charTest dataType/charTest.c)
add_executable(floatTest dataType/floatTest.c)
add_executable(intTest dataType/intTest.c)
add_executable(literal dataType/literal.c)
add_executable(pointerTest dataType/pointerTest.c)
add_executable(typeConv dataType/typeConv.c)
add_executable(varTest dataType/varTest.c)
add_executable(dataTypeTest dataType/dataTypeTest.c)
add_executable(pointerExer dataType/exer/pointerExer.c)
add_executable(dataTypeExer1 dataType/exer/dataTypeExer1.c)
add_executable(dataTypeExer2 dataType/exer/dataTypeExer2.c)
add_executable(logicalOper operator/logicalOper.c)